# Models/protocoloModel.js
@@ -1,4 +1,4 @@
-import Database from "../db/database";
+import Database from "../db/database.js";
 
 
 const banco = new Database();
@@ -25,13 +25,23 @@ export default class ProtocoloModel{
     get protData(){return this.#protData}
     set protData(protData){this.#protData = protData}
 
-    get protDescricao(){return this.#protId}
-    set protId(protId){this.#protId = protId}
+    get protDescricao(){return this.#protDescricao}
+    set protDescricao(protDescricao){this.#protDescricao = protDescricao}
 
-    get protId(){return this.#protId}
-    set protId(protId){this.#protId = protId}
+    get usuId(){return this.#usuId}
+    set usuId(usuId){this.#usuId = usuId}
 
-    get protId(){return this.#protId}
-    set protId(protId){this.#protId = protId}
+    get empId(){return this.#empId}
+    set empId(empId){this.#empId = empId}
 
+    constructor(protId, protTitulo, protTipo, protData, protDescricao, usuId, empId){
+        this.#protId = protId;
+        this.#protTitulo = protTitulo;
+        this.#protTipo = protTipo;
+        this.#protData = protData;
+        this.#protDescricao = protDescricao;
+        this.#usuId = usuId;
+        this.#empId = empId;
+    }
+  
 }
