# server.js
@@ -8,6 +8,7 @@ import cors from 'cors';
 import usuarioRoute from './Routes/usuarioRoute.js'
 import loginRouter from './Routes/loginRoute.js'
 import empresaRouter from './Routes/empresaRoute.js'
+import comunicacaoRouter from './Routes/comunicacaoRoute.js'
 
 const outputJson = require("./swagger-output.json");
 
@@ -21,8 +22,12 @@ app.use('/docs', swaggerUi.serve, swaggerUi.setup(outputJson));//pagina docs swa
 
 app.use('/usuarios', usuarioRoute);
 app.use('/login', loginRouter);
-app.use('/empresa', empresaRouter)
+app.use('/empresa', empresaRouter);
+app.use('/comunicacao', comunicacaoRouter);
 
+
+global.COMUNICACAO_IMG_CAMINHO = "/img/Comunicacao/";
+//global.RAIZ_PROJETO = __dirname; //fudeu
 
 app.listen(5000, function() {
     console.log("backend em execução");
