# swagger-output.json
@@ -73,7 +73,7 @@
         }
       }
     },
-    "/usuarios/{id}": {
+    "/usuarios/obter/{id}": {
       "get": {
         "tags": [
           "Usuários"
@@ -109,7 +109,9 @@
             "bearerAuth": []
           }
         ]
-      },
+      }
+    },
+    "/usuarios/excluir/{id}": {
       "delete": {
         "tags": [
           "Usuários"
@@ -129,6 +131,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -278,6 +283,143 @@
           }
         ]
       }
+    },
+    "/empresa/obterAcesso/{id}": {
+      "get": {
+        "tags": [
+          "Empresa"
+        ],
+        "summary": "Retorna uma empresa baseado em um id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/empresa/obter/{id}": {
+      "get": {
+        "tags": [
+          "Empresa"
+        ],
+        "summary": "Retorna uma empresa baseado em um id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/comunicacao/": {
+      "get": {
+        "tags": [
+          "Comunicacao"
+        ],
+        "summary": "Lista de Comunicacoes",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "Comunicacao"
+        ],
+        "summary": "Cadastrar comunicacao",
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/comunicacaoModel"
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -336,7 +478,189 @@
       },
       "empresaModel": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "empId": {
+            "type": "number",
+            "example": 0
+          },
+          "empCnpj": {
+            "type": "string",
+            "example": "11018395000176"
+          },
+          "empNome": {
+            "type": "string",
+            "example": "testeEmpresa"
+          },
+          "empRegime": {
+            "type": "string",
+            "example": "regimeTeste"
+          },
+          "empIe": {
+            "type": "string",
+            "example": "IeTeste"
+          },
+          "empTelefone": {
+            "type": "string",
+            "example": "(18) 99999-9999"
+          },
+          "empDescricao": {
+            "type": "string",
+            "example": "TesteDescricao"
+          },
+          "empResponsavel": {
+            "type": "string",
+            "example": "TesteResp"
+          },
+          "empProprietario": {
+            "type": "string",
+            "example": "TesteProp"
+          },
+          "empInicio": {
+            "type": "object",
+            "properties": {}
+          },
+          "empFim": {
+            "type": "object",
+            "properties": {}
+          },
+          "empEmail": {
+            "type": "string",
+            "example": "teste@teste"
+          },
+          "empEndereco": {
+            "type": "string",
+            "example": "testeEnd"
+          },
+          "empBairro": {
+            "type": "string",
+            "example": "testeBairro"
+          },
+          "empCidade": {
+            "type": "string",
+            "example": "TesteCid"
+          },
+          "empCep": {
+            "type": "string",
+            "example": "TesteCep"
+          },
+          "empUf": {
+            "type": "string",
+            "example": "TesteUf"
+          }
+        }
+      },
+      "comunicacaoModel": {
+        "type": "object",
+        "properties": {
+          "comId": {
+            "type": "number",
+            "example": 0
+          },
+          "comTitulo": {
+            "type": "string",
+            "example": "TesteTitulo"
+          },
+          "comCanal": {
+            "type": "string",
+            "example": "TesteCanal"
+          },
+          "comData": {
+            "type": "string",
+            "example": "testeData"
+          },
+          "comHora": {
+            "type": "string",
+            "example": "testeHora"
+          },
+          "comDescricao": {
+            "type": "string",
+            "example": "TesteDescricao"
+          },
+          "usuario": {
+            "type": "object",
+            "properties": {
+              "usuId": {
+                "type": "number",
+                "example": 1
+              },
+              "usuNome": {
+                "type": "undefined"
+              },
+              "usuEmail": {
+                "type": "undefined"
+              },
+              "usuSenha": {
+                "type": "undefined"
+              },
+              "usuTelefone": {
+                "type": "undefined"
+              },
+              "usuStatus": {
+                "type": "undefined"
+              },
+              "usuNivel": {
+                "type": "undefined"
+              }
+            }
+          },
+          "empresa": {
+            "type": "object",
+            "properties": {
+              "empId": {
+                "type": "number",
+                "example": 1
+              },
+              "empCnpj": {
+                "type": "undefined"
+              },
+              "empNome": {
+                "type": "undefined"
+              },
+              "empRegime": {
+                "type": "undefined"
+              },
+              "empIe": {
+                "type": "undefined"
+              },
+              "empTelefone": {
+                "type": "undefined"
+              },
+              "empDescricao": {
+                "type": "undefined"
+              },
+              "empResponsavel": {
+                "type": "undefined"
+              },
+              "empProprietario": {
+                "type": "undefined"
+              },
+              "empInicio": {
+                "type": "undefined"
+              },
+              "empFim": {
+                "type": "undefined"
+              },
+              "empEmail": {
+                "type": "undefined"
+              },
+              "empEndereco": {
+                "type": "undefined"
+              },
+              "empBairro": {
+                "type": "undefined"
+              },
+              "empCidade": {
+                "type": "undefined"
+              },
+              "empCep": {
+                "type": "undefined"
+              },
+              "empUf": {
+                "type": "undefined"
+              }
+            }
+          }
+        }
       }
     }
   }
